# AMD-Project

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .prettierignore  ARCHITECTURE.md  AUDIT.md  ECC_SETUP.md  PROJECT_STATUS.md  README-NEXUSOPS.md  SECURITY.md  SETUP.md  commitlint.config.js  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  turbo.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci-cd.yml
.husky/: pre-commit
apps/api/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: index.ts  websocket.ts
apps/policy-core/: Cargo.toml  package.json
apps/policy-core/src/: cache.rs  evaluator.rs  lib.rs  sql_gate.rs  types.rs
apps/proxy/: Dockerfile  package.json
apps/proxy/src/: github-proxy.ts  (+6 more)
apps/worker/: Dockerfile  package.json
benchmarks/: proxy-pipeline.js
docs/runbooks/: database-backup-restore.md
k8s/: api.yaml  config.yaml  namespace.yaml  network-policies.yaml  proxy.yaml  worker.yaml
scripts/: rotate-secrets.sh
src/: App.tsx  index.css
src/components/: AppSidebar.tsx  CommandPalette.tsx  Layout.tsx  MetricCard.tsx  StatusBadge.tsx
src/hooks/: use-api.ts  use-count-up.ts  use-websocket.ts
src/lib/: api-client.ts
src/pages/: Agents.tsx  Approvals.tsx  Audit.tsx  Dashboard.tsx  ECC.tsx  Intelligence.tsx  Login.tsx  Onboarding.tsx  Policies.tsx  Security.tsx  Settings.tsx  Tasks.tsx  Tools.tsx
src/stores/: auth-store.ts
src/test/: api-client.test.ts  platform-validation.test.ts
supabase/: config.toml
(+28 files in other folders)
