[package]
name = "nexusops-policy-core"
version = "0.1.0"
edition = "2021"
description = "NexusOps Rust Policy Evaluation Core — napi-rs native module"
license = "UNLICENSED"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
regex = "1"
sha3 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sqlparser = { version = "0.51", features = ["serde"] }
hex = "0.4"
once_cell = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"
